0.1.5 xxxx-xx-xx
================

 * Implicit decoration of bare intervals triggers a warning now and can be
   allowed or forbidden by the user.  Implicit decoration of bare interval
   literals is not affected.

 * newdec: New operation for explicit promotion of bare intervals into
   decorated intervals (without warning).

 * Illegal decorated interval literals are no longer allowed and produce NaIs.

 * hull: In contrast to the union function, the interval constructor is no
   longer considered a set operation and can create intervals with a
   non-trivial decoration.

 * setdiff, setxor: New set operations

 * intersect, union: Renamed set operations; the old function names (and, or)
   are hereby deprecated and are going to be removed in the next release.

 * Improved accuracy and performance of console output, intervaltotext and
   intervaltoexact.

Bugfixes
 * mtimes, mldivide: Support for broadcasting of scalar parameters
 * nextout: Support for decorated intervals
 * An error in GNU Octave core, which could lead to lost or wrong interval
   decorations, no longer affects decorated intervals (bug #42735)
 * Some errors in the function documentation have been fixed (thanks to
   doctest-for-matlab and Colin's texinfo compatibility patches)

0.1.4 2015-03-15
================

 * New interval constructors: hull, midrad

 * New interval arithmetic functions: cbrt, cot, coth, csc, csch, dilog, ei, 
   erf, erfc, gamma, gammaln, psi, rsqrt, sec, sech
 
 * mtimes: Support for fast, less accurate evaluation using BLAS routines
 
 * mldivide, mrdivide, inv: Improved performance by using faster mtimes
 
 * infsup, infsupdec: Enabled broadcasting of scalar boundaries

 * rad: May compute mid and rad simultaneously
 
 * subsref: Access to interval properties using field syntax: x.inf and x.sup
 
0.1.3 2015-02-24
================

Fixed a compile error that could possibly occur during package installation

0.1.2 2015-02-22
================
